# vrp-project

./: .gitignore  README.md  START VRP HYBRID V2.bat  Start ThetaData.txt  Start VRP Dashboard.bat  pip_freeze_current.txt  pyproject.toml  requirements.txt
VRP_Archive_Batch_1_Mover_v1/: 01_DRY_RUN_archive_batch_1.bat  04_EXECUTE_restore_batch_1.bat  README.txt  VRP_Archive_Batch_1_Summary.txt
VRP_Project_Storage_Inventory_v1/: README.txt  vrp_project_storage_inventory_v1.py
config/: vrp_corsi_intraday_hybrid_v2_production_config.json  vrp_hybrid_v2_eod_runtime_config.before_sofr_20260713_195115.json  vrp_hybrid_v2_eod_runtime_config.json
docs/: CURRENT_STATUS_AND_ROADMAP.md  DATABASE_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  EOD_POSTGRES_SHADOW.md  GOLDEN_EOD_CONTRACT.md  PRODUCTION_OPERATIONS.md  PRODUCTION_SOURCE_INVENTORY.md  REFERENCE_DATA_STORAGE.md  VRP_Corsi_Intraday_Hybrid_v2_Model_Lock.docx  VRP_Corsi_Intraday_Hybrid_v2_Production_Runbook.docx  VRP_Corsi_Intraday_Hybrid_v2_README.txt  VRP_Corsi_Intraday_Hybrid_v2_Release_Notes.txt  VRP_DOCS_REVIEW_REPORT.md  VRP_Hybrid_v2_EOD_Dashboard_README.txt  thetadata_vix_style_variance_process_v0_1.docx
migrations/: 0001_operational_schema.sql  0002_reference_data.sql
notebooks v0/: 01_clean_vix_replication_v0_7_market_close_final.ipynb  02_compare_vix_benchmarks_v0_7.ipynb.ipynb  03_term_structure_qa_and_repair_v0_7_1.ipynb  04_compare_vix_benchmarks_v0_7_1_repaired.ipynb  05_realized_variance_and_vrp_v0_1_clean.ipynb  06_trailing_vrp_zscores_and_term_structure_signals_v0_1_clean.ipynb  (+9 more)
old/: ARCHIVE_INDEX.md  (+2 more)
(+282 files in other folders)
