[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp-project"
version = "0.1.0"
description = "Production infrastructure for the SPY/SPX volatility-risk-premium signal system"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
